player: always play the next media...

...if the last one has not been played.

Regardless of the user option.

Refs #26312